--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -8,10 +8,10 @@
       </div>
     </div>
   </div>
-  <!--<div class="col-md-4 col-md-offset-1">-->
-    <!--&lt;!&ndash;这里是右侧动态加载的内容(计算器等)&ndash;&gt;-->
-    <!--<router-outlet></router-outlet>-->
-  <!--</div>-->
+  <div class="col-md-4 col-md-offset-1">
+    <!--这里是右侧动态加载的内容(计算器等)是子组件-->
+    <app-util></app-util>
+  </div>
 </div>
 
 
