--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,4 +50,54 @@
   <!--RouterOutlet - 路由插座,显示路由器生成的视图。在展示父路由的位置中的某个地方展示子路由对应的地方。-->
   <router-outlet></router-outlet>
 </div>
+<!--页脚开始-->
+<div class="footer ">
+  <div class="container">
+    <div class="row footer-top">
+      <div class="col-sm-6 col-lg-6">
+        <h4></h4>
+        <p>欢迎你加入，这里有你想要的.</p>
+      </div>
+      <div class="col-sm-6  col-lg-5 col-lg-offset-1">
+        <div class="row about">
+          <div class="col-xs-3">
+            <h4>二维码</h4>
+            <ul class="list-unstyled">
+              <li>
+                <img src="">
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-3">
+            <h4>关于</h4>
+            <ul class="list-unstyled">
+              <li>
+                <a href="">关于我们</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-3">
+            <h4>联系方式</h4>
+            <ul class="list-unstyled">
+              <li>
+                <a target="_blank" title="云梦网官方微博" href="">新浪微博</a>
+              </li>
+              <li>
+                <a href="">电子邮件</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <hr>
+    <div class="row footer-bottom">
+      <ul class="list-inline text-center">
+        <li>Copyright &copy;2017. n 看云 Software All Rights Reserved.</li>
+      </ul>
+    </div>
+  </div>
+</div><!--页脚结束-->
+
 
