--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" >
-  <h1>Hello, world!</h1>
+  <h1>Hello,{{username}}!</h1>
   <p><a class="btn btn-primary btn-lg" href="javascript:void(0)">马上体验</a></p>
 </div>
 
