--- a/src/app/util/util.component.html
+++ b/src/app/util/util.component.html
@@ -5,6 +5,6 @@
 </div>
 <div class="panel panel-default" style="position: fixed">
   <div class="panel-body">
-    <button type="button" class="btn btn-info" ng-click="submitUnitExam()">提交</button>
+    <button type="button" class="btn btn-info" (click)="submitUnitExam()">提交</button>
   </div>
 </div>
