--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" [@flyIn]="'active'">
   <div class="col-md-5 col-md-offset-1" >
     <div class="panel panel-default" *ngFor="let data of Listdata;let i = index" >
       <div class="panel-heading">
@@ -7,7 +7,8 @@
       <div class="panel-body" >
         <ul class="list" style="margin:0;padding:0;list-style:none">
           <li *ngFor="let options of data.cpaOptionDtos;let k = index">
-            <input class="magic-radio" type="radio" name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
+            <input class="magic-radio" type="radio"  [(ngModel)]="pAnswers[i]"  value="{{data.id}}-{{options.selectData}}" (click)="showMsg()"
+            name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
             <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
           </li>
         </ul>
@@ -16,7 +17,8 @@
   </div>
   <div class="col-md-4 col-md-offset-1">
     <!--这里是右侧动态加载的内容(计算器等)是子组件-->
-    <app-util></app-util>
+    <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
+    <app-util [pAnswer]="pAnswers"></app-util>
   </div>
 </div>
 
