--- a/src/app/util/util.component.html
+++ b/src/app/util/util.component.html
@@ -5,6 +5,28 @@
 </div>
 <div class="panel panel-default" style="position: fixed">
   <div class="panel-body">
-    <button type="button" class="btn btn-info" (click)="submitUnitExam()">提交</button>
+    <button type="button" class="btn btn-info" (click)="staticModal.show()">提交</button>
+
+  </div>
+</div>
+
+<div class="modal fade" bsModal #staticModal="bs-modal" [config]="{backdrop: 'static'}"
+     tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">操作提示:</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="staticModal.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        您确定提交吗?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="submitUnitExam()">确认提交</button>
+        <button type="button" class="btn btn-warning" (click)="staticModal.hide()">取消</button>
+      </div>
+    </div>
   </div>
 </div>
