--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" (click)="reviewErr()">查看错题</button>
-        <button type="button" class="btn btn-warning" [routerLink]="['/unitexam',typeCode]" window.location.href="javascript:void(0)">继续测试</button>
+        <button type="button" class="btn btn-warning" [routerLink]="['/unitexam',result.typeCode]">继续测试</button>
       </div>
     </div>
   </div>
@@ -23,26 +23,33 @@
 <!--试题列表-->
 <div class="row" [@flyIn]="'active'">
   <div class="col-md-5 col-md-offset-1">
-    <div class="panel panel-default panel-danger" [ngClass]="{'panel-danger':reviewErrList(data.id)}"  *ngFor="let data of Listdata;let i = index">
-      <div class="panel-heading">
-        <h3 class="panel-title">第{{i+1}}题.{{data.testStem}}</h3>
+    <!--此标签只作为逻辑工具使用;渲染之后不改变原有结构-->
+    <ng-container *ngFor="let data of Listdata;let i = index">
+      <div class="panel panel-default "
+           [ngClass]="{'panel-danger': reviewErrList(data.id),'panel-warning':reviewNotDoList(i)}">  <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
+        <div class="panel-heading">
+          <h3 class="panel-title">第{{i+1}}题.{{data.testStem}}</h3>
+        </div>
+        <div class="panel-body">
+          <ul class="list" style="margin:0;padding:0;list-style:none">
+            <li *ngFor="let options of data.cpaOptionDtos;let k = index">
+              <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]"
+                     value="{{data.id}}-{{options.selectData}}"
+                     (click)="showMsg()"
+                     name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
+              <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="panel-body">
-        <ul class="list" style="margin:0;padding:0;list-style:none">
-          <li *ngFor="let options of data.cpaOptionDtos;let k = index">
-            <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]" value="{{data.id}}-{{options.selectData}}"
-                   (click)="showMsg()"
-                   name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
-            <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
-          </li>
-        </ul>
-      </div>
-    </div>
+    </ng-container>
   </div>
+
   <div class="col-md-4 col-md-offset-1">
     <!--这里是右侧动态加载的内容(计算器等)是子组件-->
     <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
-    <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [typeCode]="typeCode" (childResult)="hitResult($event)"></app-util>
+    <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [typeCode]="typeCode"
+              (childResult)="hitResult($event)"></app-util>
   </div>
 </div>
 
