--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -40,7 +40,7 @@
 
             <div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
               <div>
-                <a href="javascript:void(0)" class="list-group-item">新增试题</a>
+                <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/addExam']">新增试题</a>
                 <a href="javascript:void(0)" class="list-group-item">pie Chart</a>
                 <a href="javascript:void(0)" class="list-group-item">google Chart</a>
               </div>
@@ -54,7 +54,7 @@
   </div>
   <!--后台管理右侧内容-->
   <div class="col-md-7">
-    <!--<router-outlet></router-outlet>-->
+    <router-outlet></router-outlet>
   </div>
 </div>
 
