--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -26,7 +26,8 @@
     <!--此标签只作为逻辑工具使用;渲染之后不改变原有结构-->
     <ng-container *ngFor="let data of Listdata;let i = index">
       <div class="panel panel-default "
-           [ngClass]="{'panel-danger': reviewErrList(data.id),'panel-warning':reviewNotDoList(i)}">  <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
+           [ngClass]="{'panel-danger': reviewErrList(data.id),'panel-warning':reviewNotDoList(i)}">
+        <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
         <div class="panel-heading">
           <h3 class="panel-title">第{{i+1}}题.{{data.testStem}}</h3>
         </div>
