--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -20,7 +20,7 @@
           <div class="panel panel-default" routerLinkActive="active">
               <div class="panel-heading" role="tab" id="heading1">
                 <h4 class="panel-title">
-                  <a href="javascript:void(0)" class="single-item" [routerLink]="['/manager/main']">
+                  <a href="javascript:void(0)" class="single-item" [routerLink]="['/manager/dashboard']">
                     <i class="fa fa-dashboard"></i> 主面板
                   </a>
                 </h4>
