--- a/src/app/manager/itemmanager/itemmanager.component.html
+++ b/src/app/manager/itemmanager/itemmanager.component.html
@@ -12,11 +12,12 @@
 
   <fieldset>
     <legend class="">填写选项</legend>
-    <div class="form-group" *ngFor="let cpaOption of item.cpaOptionDtos;let i = index">
+    <div formArrayName="cpaOptionDtos">
+    <div class="form-group" *ngFor="let cpaOption of cpaOptionDtos.controls;let i = index">
       <div class="col-sm-9">
-        <div class="input-group" formGroupName="cpaOption">
+        <div class="input-group" >
           <span class="input-group-addon">{{i | digitalTransfer}}</span>
-          <input name="optionData" class="form-control"
+          <input class="form-control"
                  formControlName="optionData"
                  placeholder="请填写选项内容">
           <input style="display: none" name="selectData" class="form-control"
@@ -24,7 +25,7 @@
         </div>
       </div>
     </div>
-
+    </div>
     <!--    <div class="form-group">
           <div class="col-sm-9">
             <div class="input-group">
