--- a/src/app/manager/itemmanager/itemmanager.component.html
+++ b/src/app/manager/itemmanager/itemmanager.component.html
@@ -12,22 +12,21 @@
 
   <fieldset>
     <legend class="">填写选项</legend>
-    <div formArrayName="cpaOptionDtos">
-    <div class="form-group" *ngFor="let cpaOption of cpaOptionDtos.controls;let i = index">
+    <div formArrayName="cpaOptions">
+    <div class="form-group" *ngFor="let cpaOption of addItemForm.controls.cpaOptions.controls; index as idx">
       <div class="col-sm-9">
         <div class="input-group" >
-          <span class="input-group-addon">{{i | digitalTransfer}}</span>
-          <input class="form-control"
-                 formControlName="optionData"
+          <span class="input-group-addon">{{idx | digitalTransfer}}</span>
+          <input class="form-control" [formControlName]="idx"
                  placeholder="请填写选项内容">
-          <input style="display: none" name="selectData" class="form-control"
-                 value="{{i | digitalTransfer}}" formControlName="selectData">
         </div>
       </div>
     </div>
     </div>
     <!--    <div class="form-group">
           <div class="col-sm-9">
+          formControlName="optionData"
+          formControlName="selectData"
             <div class="input-group">
               <span class="input-group-addon">B</span>
               <input [ngModelOptions]="{standalone: true}" class="form-control"
@@ -102,19 +101,19 @@
     <div class="form-group">
       <div class="col-sm-9">
         <label class="radio-inline">
-          <input type="radio" value="A" name="bresult" formControlName="bresult">
+          <input type="radio" value="A" name="result" formControlName="result">
           A
         </label>
         <label class="radio-inline">
-          <input type="radio" value="B" name="bresult" formControlName="bresult">
+          <input type="radio" value="B" name="result" formControlName="result">
           B
         </label>
         <label class="radio-inline">
-          <input type="radio" value="C" name="bresult" formControlName="bresult">
+          <input type="radio" value="C" name="result" formControlName="result">
           C
         </label>
         <label class="radio-inline">
-          <input type="radio" value="D" name="bresult" formControlName="bresult">
+          <input type="radio" value="D" name="result" formControlName="result">
           D
         </label>
       </div>
