--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
             </ul>
           </li>
           <li routerLinkActive="active"><a href="javascript:void(0)">模拟测验</a></li>
-          <li routerLinkActive="active"><a href="javascript:void(0)">个人中心</a></li>
+          <li routerLinkActive="active"><a [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a></li>
           <li routerLinkActive="active"><a [routerLink]="['/manager']" href="javascript:void(0)">管理中心</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
