--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -1,6 +1,6 @@
 <!--model-->
-<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="initHidden()" bsModal #autoShownModal="bs-modal"
-     class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div *ngIf="isModalShown" [config]="{ show: true }" (onHidden)="initHidden()" bsModal #autoShownModal="bs-modal" class="modal fade"
+  tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
@@ -25,8 +25,7 @@
   <div class="col-md-5 col-md-offset-1">
     <!--此标签只作为逻辑工具使用;渲染之后不改变原有结构-->
     <ng-container *ngFor="let data of Listdata;let i = index">
-      <div class="panel panel-default "
-           [ngClass]="{'panel-danger': reviewErrList(data.id),'panel-warning':reviewNotDoList(i)}">
+      <div class="panel panel-default " [ngClass]="{'panel-danger': reviewErrList(data.id),'panel-warning':reviewNotDoList(i)}">
         <!--一个标签内[ngClass]不可以写多个,如果需要多个,将方法写在一个[ngClass]内-->
         <div class="panel-heading">
           <h3 class="panel-title">第{{i+1}}题.{{data.testStem}}</h3>
@@ -34,13 +33,23 @@
         <div class="panel-body">
           <ul class="list" style="margin:0;padding:0;list-style:none">
             <li *ngFor="let options of data.cpaOptionDtos;let k = index">
-              <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]"
-                     value="{{data.id}}-{{options.selectData}}"
-                     (click)="showMsg()"
-                     name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}"/>
+              <input class="magic-radio" type="radio" [(ngModel)]="pAnswers[i]" value="{{data.id}}-{{options.selectData}}" (click)="showMsg()"
+                name="optionsRadio{{i}}" id="optionsRadio{{i}}{{k}}" />
               <label for="optionsRadio{{i}}{{k}}">{{options.selectData}}.{{options.optionData}}</label>
             </li>
+            <li style="text-align:right">
+              <span class="glyphicon glyphicon-comment" style="cursor:pointer" aria-hidden="true" (click)="toggleCommentwindow(i)"></span>
+              <span class="glyphicon glyphicon-star-empty" style="cursor:pointer" aria-hidden="true" (click)="toggleCollect(i,this)"></span>
+              <!-- [ngClass]="{'glyphicon-star':collect(i)}" -->
+            </li>
           </ul>
+          <form role="form" style="text-align:right" *ngIf="toggleCommentwindow(i)" >
+            <div class="form-group">
+              <textarea class="form-control" rows="3" placeholder="请输入评论内容..."></textarea>
+            </div>
+              <button #commont type="button" class="btn btn-info btn-xs" (click)="commentItem(i,commont.value)">发布评论</button>
+            </form>
+          
         </div>
       </div>
     </ng-container>
@@ -49,10 +58,6 @@
   <div class="col-md-4 col-md-offset-1">
     <!--这里是右侧动态加载的内容(计算器等)是子组件-->
     <!-- 其中”pAnswers” 为父组件中的属性，[pAnswer] 为子组件的输入;在子组件中使用 @Input() pAnswer 来接受父组件传递的值 -->
-    <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [typeCode]="typeCode"
-              (childResult)="hitResult($event)"></app-util>
+    <app-util [pAnswer]="pAnswers" [totleCount]="totleCount" [typeCode]="typeCode" (childResult)="hitResult($event)"></app-util>
   </div>
 </div>
-
-
-
